--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vue/cli-service": "^5.0.8",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "sass": "^1.70.0",
